# zk-multiprover-snark

./: .gitignore
mpc-plonk/: Cargo.toml
mpc-plonk/src/: lib.rs  util.rs
mpc-plonk/src/relations/: flat.rs  mod.rs  structured.rs
