[package]
name = "mpc-plonk"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#arkworks in SRI versions
ark-ff = {git = "https://github.com/SRI-CSL/algebra", default-features=false, branch = "v3_sri"}
ark-ec = {git = "https://github.com/SRI-CSL/algebra", default-features=false, branch = "v3_sri"}
ark-poly = {git = "https://github.com/SRI-CSL/algebra", default-features=false, branch = "v3_sri"}
ark-relations = { git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features = false }
ark-serialize = { git = "https://github.com/SRI-CSL/algebra", default-features = false, branch = "v3_sri", features = [ "derive" ] }
ark-std = { version="0.2.1-alpha.0" ,  git = "https://github.com/SRI-CSL/utils", default-features = false}
ark-groth16 = { git = "https://github.com/SRI-CSL/groth16",  default-features = false, features = [ "std" ] }
ark-ed-on-bls12-381 =  { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-bls12-377 = { git = "https://github.com/SRI-CSL/curves", default-features = true, features = [ "r1cs" ], branch = "v3_sri" }
ark-poly-commit = { git = "https://github.com/SRI-CSL/poly-commit", branch = "v3_sri", default-features = false }

mpc-net = { git = "https://github.com/SRI-CSL/mpc-net" }
mpc-trait = { git = "https://github.com/SRI-CSL/mpc-trait"}
mpc-algebra = { git = "https://github.com/SRI-CSL/mpc-algebra"}

# SRI and SIEVE dependencies
vlpa19       = { git = "https://github.com/SRI-CSL/zk-gen.git", branch = "for_plonk", default-features = false  }
sieve_fields = { git = "https://github.com/SRI-CSL/zk-gen.git", branch = "for_plonk", default-features = false  }
zki_sieve    = {path = "../zkinterface-sieve/rust"} # Need to add manually; not open-source

# Misc
num-bigint = "0.3.0"
lazy_static = "1"
derivative = { version = "2.0", features = ["use_core"]}
log = {version = "0.4"}
digest = { version = "0.9" }

rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
rayon = { version = "1.0.0", optional = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
thiserror = "1"


env_logger = "0.8"
structopt = "0.3"
clap = "2"
merlin = "3"
sha2 = "0.9"
blake2 = "0.9"
